--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
         "react-scripts": "4.0.3",
         "web-vitals": "^1.0.1",
         "@material-ui/icons": "^4.11.2",
-        "react-datasheet": "^1.4.9"
+        "react-datasheet": "^1.4.9",
+        "react-dnd": "^2.5.4",
+        "react-dnd-html5-backend": "5.0.1",
+        "react-select": "^1.0.0-rc.3"
     },
     "scripts": {
         "start": "react-scripts start",
